Fix merge in DynamoDBFileInfoStoreIT